# cppad_trajectory_optimization

app/: CMakeLists.txt  build.gradle
app/libs/include/cppad/: configure.hpp
app/libs/include/cppad/ipopt/: solve.hpp
app/src/androidTest/java/io/jeti/trajectoryoptimization/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  collocation_constraints.h  control_rate_constraints.h  cout.h  cppad_example.cpp  dynamics_constraints.h  equality_constraint.h  fg_eval.h  fused_contraint.h  independent.7z  inequality_constraint.h  initial_state_constraints.h  lagrange_derivatives.h  main.cpp  smooth_control_constraints.h  template_integer.h  test_constraints.cpp  test_cppad.cpp  utils.h  variable_getter.h  waypoint_constraint.h  waypoint_constraints.h
app/src/main/java/io/jeti/trajectoryoptimization/: Line.java  MainActivity.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/jeti/trajectoryoptimization/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
